# jd-cv-analyzer

./: README.md  main_api.py  pyproject.toml  rank_cv.py  requirements.txt  score_jd.py  streamlit.py
